[package]
name = "dbt-lint"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dbt-schemas = { workspace = true }
serde_json = "1.0.141"

[lints]
workspace = true
